ChangeLog for the Astro project.

20200204:
	* add callback stuff to the Guideport class
	* introduce GuidePortActivation class to simplify interface
	* add callback stuff to the Guideport interface in slice
	* add callback stuff to the GuidePortI servant
	* add snowguideport client with monitoring capability

20200203:
	* remove #include <filesystem> again, wait until c++17 becomes
	  more widespread

20200202:
	* add callback stuff to the Mount class
	* refactor the simulator mount to work with callbacks
	* add callbacks to the MountI
	* add monitoring to the snowmount client

20200201:
	* add statistics command to snowdaemon
	* add call statistics to all server side interfaces
	* fix some warnings in snowguide.cpp
	* fix statistics to compile
	* fix bug in devices.properties of celestron driver
	* added proper east/west decoding in CelestronMount
	* add location source to the Mount class

20200130:
	* system information interface
	* add core temperature to Temperature class
	* add system info to DaemonI class

20200129:
	* simplify the InstrumentBackend classes
	* ensure that an instrument can have only one mount, guideport,
	  adaptiveoptics and guideccd. This makes construction of guiders
	  from the instrument name simpler
	* reduce GuiderDescriptor to the instrument name in ICE protocol

20200128:
	* more configurable variables
	* get more information about kalman filter in the debug log

20200127:
	* add display of target point in processed image of StarTracker
	* add SAO star catalog
	* add flattening function to Horizon class
	* fix some bugs in the horizon parser
	* multiple bug fixes
	* add ServiceObjectPtr type

20200126:
	* add configuration documentation to the ICE interface
	* add config docu options to the snowconfig client
	* document all known configuration options

20200117:
	* make calibration faster by moving simultanously
	* add configuration keys for hot pixel detection and calibration
	* add README.starcatalogs