@@ -8,6 +8,8 @@
 
 #include <InstrumentWidget.h>
 #include <QTimer>
+#include <IceConversions.h>
+#include <camera.h>
 
 namespace snowgui {
 
@@ -15,12 +17,49 @@ namespace Ui {
 	class guideportcontrollerwidget;
 }
 
+class guideportcontrollerwidget;
+
+/**
+ * \brief Callback class for the guideport
+ *
+ * The callback needs to be a separate class because ICE has it's own
+ * reference counting resource managment.
+ *
+ * Since we want to send messages from the callback object, it must inherit
+ * from QObject. Apparently, the MOC compiler cannot handle this unless
+ * QObject is the first in the list of superclasses. With QObject in second
+ * position, an error is generated when compiling
+ * moc_guideportcontrollerwidget.cpp
+ */
+class GuidePortCallbackI : public QObject, public snowstar::GuidePortCallback {
+	Q_OBJECT
+
+	guideportcontrollerwidget&	_guideportcontrollerwidget;
+public:
+	GuidePortCallbackI(guideportcontrollerwidget& g);
+	void	activate(const snowstar::GuidePortActivation& activation,
+			const Ice::Current& /* current */);
+signals:
+	void	activation(astro::camera::GuidePortActivation);
+};
+
+/**
+ * \brief A widget to control a guideport
+ */
 class guideportcontrollerwidget : public InstrumentWidget {
 	Q_OBJECT
 
 	snowstar::GuidePortPrx	_guideport;
+
+	Ice::ObjectPtr	_guideport_callback;
+	Ice::Identity	_guideport_identity;
+
+	QTimer	_activationTimerRAplus;
+	QTimer	_activationTimerRAminus;
+	QTimer	_activationTimerDECplus;
+	QTimer	_activationTimerDECminus;
+
 	float	_activationtime;
-	QTimer	_statusTimer;
 	unsigned char	_active;
 	float	_guiderate;
 public:
@@ -40,7 +79,6 @@ private:
 
 	void	setupGuideport();
 
-
 public slots:
 	void	guideportChanged(int);
 	void	activateRAplus();
@@ -49,9 +87,14 @@ public slots:
 	void	activateDECminus();
 	void	setActivationTime(double);
 	void	changeActivationTime(double);
-	void	statusUpdate();
+	void	updateActivation();
 	void	radecCorrection(astro::RaDec,bool);
 	void	activateClicked();
+	void	activate(astro::camera::GuidePortActivation);
+	void	deactivatedRAplus();
+	void	deactivatedRAminus();
+	void	deactivatedDECplus();
+	void	deactivatedDECminus();
 };
 
 } // namespace snowogui
